[gd_scene load_steps=9 format=3 uid="uid://bfog256vyy4sw"]

[ext_resource type="Script" uid="uid://bmpdeskr0l1gi" path="res://scripts/ui/top_right_hud.gd" id="1_lfyla"]
[ext_resource type="Texture2D" uid="uid://b01b2m2gdk0mc" path="res://textures/key_texture.tres" id="2_1jq22"]
[ext_resource type="Texture2D" uid="uid://cvcal0kkh6jv8" path="res://textures/bridge_parts_texture.tres" id="2_2blfd"]
[ext_resource type="Texture2D" uid="uid://hh4vsue02v0l" path="res://textures/sandbag_texture.tres" id="2_53ots"]
[ext_resource type="FontFile" uid="uid://3ea2t807hguu" path="res://assets/external/fonts/m5x7.ttf" id="3_53ots"]
[ext_resource type="Script" uid="uid://qco2hx180wyu" path="res://scripts/ui/flash_message.gd" id="4_2blfd"]

[sub_resource type="Theme" id="Theme_3k6fr"]
GridContainer/constants/h_separation = 4
GridContainer/constants/v_separation = 0
MarginContainer/constants/margin_bottom = 4
MarginContainer/constants/margin_left = 4
MarginContainer/constants/margin_right = 4
MarginContainer/constants/margin_top = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1e7uk"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.23921569, 0.14509805, 0.23137255, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.29803923, 0.18431373, 0.28627452, 1)

[node name="HUD" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3k6fr")

[node name="TopRight" type="Control" parent="Control"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_lfyla")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Control/TopRight"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -108.0
offset_bottom = 44.0
grow_horizontal = 0

[node name="GridContainer" type="GridContainer" parent="Control/TopRight/MarginContainer"]
layout_mode = 2
columns = 10

[node name="PanelContainer" type="PanelContainer" parent="Control/TopRight/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="BridgeParts" type="TextureRect" parent="Control/TopRight/MarginContainer/GridContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_2blfd")

[node name="PanelContainer2" type="PanelContainer" parent="Control/TopRight/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="Sandbags" type="Control" parent="Control/TopRight/MarginContainer/GridContainer/PanelContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 16)
layout_mode = 2

[node name="Sand1" type="TextureRect" parent="Control/TopRight/MarginContainer/GridContainer/PanelContainer2/Sandbags"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 1.9999999
offset_top = 3.9999995
offset_right = 42.0
offset_bottom = 44.0
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_53ots")

[node name="Sand2" type="TextureRect" parent="Control/TopRight/MarginContainer/GridContainer/PanelContainer2/Sandbags"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 11.999999
offset_top = 3.9999995
offset_right = 52.0
offset_bottom = 44.0
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_53ots")

[node name="Sand3" type="TextureRect" parent="Control/TopRight/MarginContainer/GridContainer/PanelContainer2/Sandbags"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 22.0
offset_top = 4.0000005
offset_right = 62.0
offset_bottom = 44.0
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_53ots")

[node name="PanelContainer3" type="PanelContainer" parent="Control/TopRight/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="HasKeyHud" type="TextureRect" parent="Control/TopRight/MarginContainer/GridContainer/PanelContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_1jq22")

[node name="PanelContainer4" type="PanelContainer" parent="Control/TopRight/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="ValueTurn" type="Label" parent="Control/TopRight/MarginContainer/GridContainer/PanelContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_type_variation = &"HeaderSmall"
theme_override_fonts/font = ExtResource("3_53ots")
theme_override_font_sizes/font_size = 16
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinMessage" type="Control" parent="Control"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_2blfd")

[node name="CenterContainer" type="CenterContainer" parent="Control/WinMessage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/WinMessage/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1e7uk")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/WinMessage/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Control/WinMessage/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "YOU WIN!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Control/WinMessage/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_53ots")
text = "<SPACE> to go again"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LostMessage" type="Control" parent="Control"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_2blfd")
type = 1

[node name="CenterContainer" type="CenterContainer" parent="Control/LostMessage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/LostMessage/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1e7uk")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/LostMessage/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/LostMessage/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "DEFEAT!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Control/LostMessage/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_53ots")
text = "<SPACE> to try  again"
horizontal_alignment = 1
vertical_alignment = 1
